test/js/node/test/parallel/test-stream-duplex-from.js.log.txt
1 | (function (thisArgument)
              ^
TypeError: undefined is not a function
      at duplexify (internal:streams/duplexify:47:23)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-duplex-from.js:113:20
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
